@@ -1,0 +1,66 @@
+<?php
+
+namespace N98\Magento\Command\Media;
+
+use N98\Magento\Command\AbstractMagentoCommand;
+use Symfony\Component\Console\Input\InputArgument;
+use Symfony\Component\Console\Input\InputOption;
+use Symfony\Component\Console\Input\StringInput;
+use Symfony\Component\Console\Input\InputInterface;
+use Symfony\Component\Console\Output\OutputInterface;
+use Symfony\Component\Finder\Finder;
+use Symfony\Component\Finder\SplFileInfo;
+
+class DumpCommand extends AbstractMagentoCommand
+{
+    protected function configure()
+    {
+        $this
+            ->setName('media:dump')
+            ->addOption('strip', '', InputOption::VALUE_NONE, 'Excludes image cache')
+            ->addArgument('filename', InputArgument::OPTIONAL, 'Dump filename')
+            ->setDescription('Creates an archive with content of media folder.')
+        ;
+    }
+
+    /**
+     * @param InputInterface $input
+     * @param OutputInterface $output
+     * @return int|null|void
+     * @throws \RuntimeException
+     */
+    protected function execute(InputInterface $input, OutputInterface $output)
+    {
+        $this->detectMagento($output);
+        $finder = new Finder();
+        $finder
+            ->files()
+            ->followLinks(true)
+            ->in($this->getApplication()->getMagentoRootFolder() . DIRECTORY_SEPARATOR . 'media');
+        if ($input->getOption('strip')) {
+            $finder->exclude('catalog/product/cache');
+        }
+
+        $filename = $input->getArgument('filename');
+        if (empty($filename)) {
+            $filename = 'media_'. date('Ymd_his') . '.zip';
+        }
+
+        $zip = new \ZipArchive();
+        $zip->open($filename, \ZIPARCHIVE::CREATE);
+        $zip->addEmptyDir('media');
+        $lastFolder = '';
+        foreach ($finder as $file) {
+            /* @var $file SplFileInfo */
+            $currentFolder = pathinfo($file->getRelativePathname(), PATHINFO_DIRNAME);
+            if ($currentFolder != $lastFolder) {
+                $output->writeln(sprintf('<info>Compress directory:</info> <comment>media/%s</comment>', $currentFolder));
+            }
+            $zip->addFile($file->getPathname(), 'media' . DIRECTORY_SEPARATOR . $file->getRelativePathname());
+
+            $lastFolder = $currentFolder;
+        }
+
+        $zip->close();
+    }
+}
